style: improve mobile navigation visuals and fix header overflow

--- a/css/index.css
+++ b/css/index.css
@@ -227,7 +227,7 @@ h2 {
    /* TO MAKE THE HEADER STICKY LATER */
    height: 6.2rem;
    padding: 0 4.8rem;
-   overflow-x: hidden;
+   /* overflow-x: hidden; */
 }
 
 /**************************/
